# Raytracing

./: .gitignore  Bounds3.cpp  Bounds3.h  Bvh.cpp  Bvh.h  CMakeLists.txt  Camera.h  Hittable.h  HittableList.cpp  HittableList.h  LICENSE  Material.h  Matrix3.cpp  Matrix3.h  Ray.h  Renderer.cpp  Renderer.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  TransformedObject.cpp  TransformedObject.h  Triangle.cpp  Triangle.h  Vector3.h  main.cpp  rtbase.h
